--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>cap.curso.accesos</groupId>
 	<artifactId>accesos</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ejemploBoot</name>
+	<name>accesos</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -65,6 +65,10 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 	</dependencies>
 
