--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.mvc.static-path-pattern=/resources/**
 spring.resources.static-locations=resources
+spring.jpa.hibernate.use-new-id-generator-mappings= false
