--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=Cursocurso1
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
-hibernate.id.new_generator_mappings=false
+spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.mvc.static-path-pattern=/resources/**
