--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://accesos:3306/accesos?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Capgemini121
+spring.datasource.username=curso
+spring.datasource.password=Cursocurso1
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
